--- a/website/index.html
+++ b/website/index.html
@@ -55,7 +55,7 @@
           </ul>
           <a href="register.php">
           <button id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-          Start today!
+          Register today!
           </button></a>
         </div>
       </div>
@@ -70,7 +70,7 @@
             Invoice manager in the palm of your hand!
           </h1>
           <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-            Start today!
+            Register today!
           </button>
         </div>
         <!--Right Col-->
