spliting into templates

--- a/website/app/invoice_templates/default.html
+++ b/website/app/invoice_templates/default.html
@@ -132,19 +132,17 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <p>test test <a href="https://www.wdev-solutions.com">wdev solutions</a></p>
-
                     </div>
-                    <div class="text-right mt-3"> <button type="button" class="btn btn-primary"><b><i class="fa fa-paper-plane-o mr-1"></i></b>
-                            Send invoice</button> </div>
                 </div>
             </div>
+            <div class="card-footer">
+                <span class="text-muted">Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat nulla pariatur.Duis aute irure dolor in reprehenderit
+                </span>
+                <p class="mt-2 uneditable">Brought to you by: <a href="https://www.wdev-solutions.com">WDEV Solutions</a> | Copyright © 2023</p>
+            </div>
         </div>
-        <div class="card-footer"> <span class="text-muted">Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur.Duis aute irure dolor in reprehenderit</span>
-        </div>
-    </div>
 </div>
