--- a/website/app/invoice_templates/default.html
+++ b/website/app/invoice_templates/default.html
@@ -140,9 +140,9 @@
                     adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
                     ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                     consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat nulla pariatur.Duis aute irure dolor in reprehenderit
+                    fugiat nulla pariatur.
                 </span>
-                <p class="mt-2 uneditable">Brought to you by: <a href="https://www.wdev-solutions.com">WDEV Solutions</a> | Copyright © 2023</p>
+                <p class="mt-2 uneditable">Brought to you by: <a href="https://www.invoicey.xyz">Invoicey</a> | Copyright © 2023</p>
             </div>
         </div>
 </div>
